# EZCache

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: main.yml
benchmark/: benchmark.cpp
include/: EZCache.hpp  internal.hpp
tests/: test_cache.cpp
